--- a/infra-viewer/apps/website/src/styles.scss
+++ b/infra-viewer/apps/website/src/styles.scss
@@ -24,3 +24,15 @@
 .uk-card-default{
   box-shadow: $global-small-box-shadow;
 }
+
+.max-h-100vh{
+  max-height: 100vh;
+}
+
+.overflow-scroll-y{
+  overflow-y: auto;
+}
+
+.h-100vh{
+  height: 100vh;
+}
