--- a/infra-viewer/apps/website/src/theme/theme.scss
+++ b/infra-viewer/apps/website/src/theme/theme.scss
@@ -1,12 +1,18 @@
-// 1. Your custom variables and variable overwrites.
+$global-primary-background: #02357c;
+
 @import "forms.scss";
 
-$global-primary-background: #02357c;
 
 // 2. Import default variables and available mixins.
 @import "uikit/src/scss/variables-theme";
 @import "uikit/src/scss/mixins-theme";
 
+// This mixin is used to create the border on an active tab. It is extended to make the border thicker and the font bold
+@mixin hook-tab-item-active {
+  border-color: $global-primary-background;
+  border-width: 4px;
+  font-weight: bold;
+}
+
 // 4. Import UIkit
-//@import "uikit/dist/css/uikit.css";
 @import "uikit/src/scss/uikit-theme.scss";
