--- a/infra-viewer/apps/website/src/app/pages/config-page/config-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/config-page/config-page.component.html
@@ -1,26 +1,63 @@
 <div class="uk-container">
   <h1 class="uk-heading-medium uk-heading-bullet">Configuration</h1>
   <p>On this page you can quickly configure the infraviewer</p>
-  <button class="uk-button uk-button-primary" type="button" (click)="getInformation(true)">Refresh config</button>
-
-  <ul uk-accordion *ngIf="configuration">
-    <li class="uk-open">
-      <h2 class="uk-accordion-title">Configuration</h2>
-      <div class="uk-accordion-content">
-        <section class="layers">
-          <h3 class="uk-heading-divider">Layers</h3>
-          <ul class="uk-list uk-list-disc uk-list-primary uk-list-divider">
-            <li @swipeLeft *ngFor="let layer of configuration.layers">
-              <ng-template *ngTemplateOutlet="layerTemplate; context: {layer: layer, type: layer.type} "></ng-template>
-            </li>
-          </ul>
-        </section>
-      </div>
-    </li>
-    <li>
-      <h2 class="uk-accordion-title">Advanced Config</h2>
-      <section class="uk-accordion-content">
-        <form class="uk-form-stacked" #advancedForm="ngForm" (ngSubmit)="onAdvancedConfigSubmit()">
+  <form class="uk-form-stacked" #form="ngForm">
+    <div class="uk-grid uk-flex-between">
+      <button class="uk-button uk-button-default" type="button" (click)="getInformation(true)">Refresh config</button>
+      <button
+        type="submit"
+        [disabled]="form.invalid"
+        (click)="onAdvancedConfigSubmit()" class="uk-button uk-button-primary">Submit
+      </button>
+    </div>
+    <ul uk-accordion *ngIf="configuration">
+      <li class="uk-open">
+        <h2 class="uk-accordion-title">Layers</h2>
+        <div class="uk-accordion-content">
+          <section class="layers">
+            <ul class="uk-list uk-list-disc uk-list-primary uk-list-divider">
+              <li @swipeLeft *ngFor="let layer of configuration.layers">
+                <ng-template
+                  *ngTemplateOutlet="layerTemplate; context: {layer: layer, type: layer.type} "></ng-template>
+              </li>
+            </ul>
+          </section>
+        </div>
+      </li>
+      <li class="uk-open">
+        <h2 class="uk-accordion-title">Quality Settings</h2>
+        <div class="uk-accordion-content">
+          <section>
+            <!--          Create a select box for quality profile, low medium or high-->
+            <div class="uk-margin">
+              <label class="uk-form-label" for="qualityProfile">Quality</label>
+              <div class="uk-form-controls">
+                <select name="qualityProfile" class="uk-select" id="qualityProfile"
+                        [(ngModel)]="configuration.view.qualityProfile">
+                  <option value="low">Low</option>
+                  <option value="medium">Medium</option>
+                  <option value="high">High</option>
+                </select>
+              </div>
+            </div>
+            <!--            Create a checkbox for starsEnabled and atmosphereEnabled-->
+            <div class="uk-margin">
+              <label class="uk-form-label" for="starsEnabled">
+                <input name="starsEnabled" type="checkbox" id="starsEnabled"
+                       [(ngModel)]="configuration.view.environment.starsEnabled"> Stars enabled</label>
+            </div>
+            <div class="uk-margin">
+              <label class="uk-form-label" for="atmosphereEnabled">
+                <input name="atmosphereEnabled" type="checkbox"
+                       id="atmosphereEnabled"
+                       [(ngModel)]="configuration.view.environment.atmosphereEnabled"> Atmosphere enabled</label>
+            </div>
+          </section>
+        </div>
+      </li>
+      <li>
+        <h2 class="uk-accordion-title">Advanced Config</h2>
+        <section class="uk-accordion-content">
           <div>
             <label class="uk-form-label">Configuration JSON</label>
             <div class="uk-form-controls">
@@ -28,13 +65,10 @@
                       [(ngModel)]="configurationString"></textarea>
             </div>
           </div>
-          <button type="submit" [disabled]="advancedForm.invalid"
-                  class="uk-margin-small-top uk-button uk-button-primary">Submit
-          </button>
-        </form>
-      </section>
-    </li>
-  </ul>
+        </section>
+      </li>
+    </ul>
+  </form>
 </div>
 
 <ng-template #layerTemplate let-layer="layer" let-type="type">
