--- a/infra-viewer/apps/website/src/app/main/app.component.html
+++ b/infra-viewer/apps/website/src/app/main/app.component.html
@@ -1,11 +1,11 @@
 <nav class="uk-navbar-container">
   <div class="uk-navbar-left">
-
+    <img class="uk-logo uk-margin-left" src="../../assets/logo.png" alt="Logo gemeente arnhem">
     <ul class="uk-navbar-nav">
-      <li routerLinkActive="uk-active"><a routerLink="/">Home</a></li>
-      <li routerLinkActive="uk-active"><a routerLink="/map">Map</a></li>
-      <li routerLinkActive="uk-active"><a routerLink="/config">Config</a></li>
-      <li routerLinkActive="uk-active"><a routerLink="/hub">Content Hub</a></li>
+      <li routerLinkActive="uk-active"><a routerLink="/home">Home</a></li>
+      <li routerLinkActive="uk-active" *ngIf="isLoggedIn"><a routerLink="/map">Map</a></li>
+      <li routerLinkActive="uk-active" *ngIf="isLoggedIn"><a routerLink="/config">Config</a></li>
+      <li routerLinkActive="uk-active" *ngIf="isLoggedIn"><a routerLink="/hub">Content Hub</a></li>
     </ul>
 
   </div>
