--- a/infra-viewer/apps/website/src/app/pages/hub-page/hub-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/hub-page/hub-page.component.html
@@ -1,8 +1,8 @@
 <div uk-grid class="uk-grid-small" *ngIf="hubItems">
   <!--  Create a column with a search bar and options to filter on-->
-  <div class="uk-width-1-4 uk-height-1-1 uk-background-muted">
+  <div class="uk-width-1-4 uk-height-1-1">
     <form #form="ngForm" (ngSubmit)="filterItems()" class="uk-card uk-card-default uk-card-body uk-position-z-index"
-          uk-sticky="animation: uk-animation-slide-top">
+          uk-sticky>
       <h3 class="uk-card-title">Search</h3>
       <div class="uk-margin">
         <div class="uk-inline">
@@ -25,8 +25,18 @@
 
   <!--Create rows with four columns iterating over the hubitems, showing it's information-->
   <div class="uk-width-1-2" appScrollTracker (scrollingFinished)="getItems()">
-    <div class="uk-grid-match uk-grid-small" uk-grid>
-      <div class="uk-width-1-3" *ngFor="let hubItem of hubItems">
+    <div
+      uk-grid
+      #hubItemsList="cdkDropList"
+      [cdkDropListConnectedTo]="[activeLayersList]"
+      cdkDropList
+      [cdkDropListData]="hubItems"
+      class="uk-grid-match uk-grid-small">
+      <div
+        cdkDrag
+        *ngFor="let hubItem of hubItems"
+        [cdkDragData]="hubItem"
+        class="uk-width-1-3">
         <div class="uk-card uk-card-default uk-card-hover uk-flex uk-flex-column uk-flex-between" data-aos="fade-up">
           <div class="uk-card-media-top">
             <a target="_blank" [href]="createUrlToPortalItem(hubItem)">
@@ -60,9 +70,45 @@
   </div>
 
   <div class="uk-width-1-4">
-    <div uk-height-viewport class="uk-card uk-card-default uk-card-body uk-position-z-index"
-         uk-sticky="animation: uk-animation-slide-top">
+    <div
+      uk-sticky
+      class="uk-card uk-card-default uk-card-body uk-position-z-index"
+    >
       <h3 class="uk-card-title">Active Layers</h3>
+      <div
+        #activeLayersList="cdkDropList"
+        [cdkDropListConnectedTo]="[hubItemsList]"
+        cdkDropList
+        [cdkDropListData]="configuration?.layers || []"
+        (cdkDropListDropped)="drop($event)"
+        [cdkDropListEnterPredicate]="layerAlreadyInConfigurationPredicate.bind(this)"
+        uk-height-viewport="offset-top: true"
+      >
+        <ul  class="uk-list uk-list-disc uk-list-primary uk-list-divider uk-height-1-1" *ngIf="configuration">
+          <li @swipeLeft *ngFor="let layer of configuration.layers">
+            <div class="example-custom-placeholder" *cdkDragPlaceholder>4</div>
+            <div class="uk-flex uk-flex-between">
+              <div class="uk-width-1-1">
+                <ng-container [ngSwitch]="layer.type">
+                  <span *ngSwitchCase="'scene'" uk-icon="icon: world"></span>
+                  <span *ngSwitchCase="'geoJSON'" uk-icon="icon: code"></span>
+                  <span *ngSwitchCase="'feature'" uk-icon="icon: location"></span>
+                  <span *ngSwitchCase="'map-image'" uk-icon="icon: image"></span>
+                  <span *ngSwitchDefault uk-icon="icon: question"></span>
+                </ng-container>
+                <span class="uk-margin-small-left"
+                      [class.uk-text-warning]="!layer.title">{{layer.title || "Unknown Title"}}</span>
+              </div>
+              <div class="uk-flex">
+                <button class="uk-button uk-button-danger uk-button-small"
+                        (click)="removeLayerFromConfiguration(layer)">
+                  <span uk-icon="icon: trash"></span>
+                </button>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
