--- a/infra-viewer/apps/website/src/app/main/app.component.html
+++ b/infra-viewer/apps/website/src/app/main/app.component.html
@@ -1,6 +1,8 @@
 <nav class="uk-navbar-container">
   <div class="uk-navbar-left">
-    <img class="uk-logo uk-margin-left" src="../../assets/logo.png" alt="Logo gemeente arnhem">
+    <a routerLink="/home" class="uk-logo uk-margin uk-margin-remove-vertical">
+      <img src="../../assets/logo.png" alt="Logo gemeente arnhem">
+    </a>
     <ul class="uk-navbar-nav">
       <li routerLinkActive="uk-active"><a routerLink="/home">Home</a></li>
       <li routerLinkActive="uk-active" *ngIf="isLoggedIn"><a routerLink="/map">Map</a></li>
