--- a/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" uk-height-viewport="offset-top:true">
   <div class="text-container">
     <h1 class="uk-heading-large" data-aos="fade-zoom-in">Infraviewer</h1>
     <p>Bekijk de openbare ruimte van Arnhem in 3D.</p>
