--- a/infra-viewer/apps/website/src/app/main/app.component.html
+++ b/infra-viewer/apps/website/src/app/main/app.component.html
@@ -13,4 +13,13 @@
   </div>
 </nav>
 
+<div class="alert-container">
+  <div (click)="onAlertClick(message)" *ngFor="let message of messageService.getMessages()" @swipeTop
+       [ngClass]="{'info' : 'uk-alert-primary', 'warning' : 'uk-alert-warning', 'error': 'uk-alert-danger', 'success': 'uk-alert-success'}[message.severity]"
+       uk-alert
+  >
+    <p>{{message.message}}</p>
+  </div>
+</div>
+
 <router-outlet></router-outlet>
