--- a/infra-viewer/apps/website/src/theme/theme.scss
+++ b/infra-viewer/apps/website/src/theme/theme.scss
@@ -48,5 +48,12 @@ $global-primary-background: #02357c;
   font-weight: bold;
 }
 
+@mixin hook-form() {
+  border: $form-border-width solid $form-border;
+  transition: 0.2s ease-in-out;
+  transition-property: color, background-color, border;
+  border-radius: $border-rounded-border-radius;
+}
+
 // 4. Import UIkit.
 @import "uikit/src/scss/uikit-theme.scss";
