--- a/infra-viewer/apps/website/src/app/main/app.component.html
+++ b/infra-viewer/apps/website/src/app/main/app.component.html
@@ -5,7 +5,7 @@
       <ul class="uk-navbar-nav">
         <li class="uk-logo">
           <!-- Generator: Adobe Illustrator 27.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-          <svg id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+          <svg routerLink="/home" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                x="0px" y="0px"
                viewBox="0 0 1366 614" xml:space="preserve">
 <path fill="#243880" d="M1218.8,485.1c-3.6-0.9-7-2.1-10.4-2.7c-19.3-3.7-38.8-4.4-58.3-5.4c-11.7-0.6-23.4-2.1-35-3.4
