--- a/infra-viewer/apps/website/src/styles.scss
+++ b/infra-viewer/apps/website/src/styles.scss
@@ -21,6 +21,10 @@
   background: $global-success-background;
 }
 
+.uk-background-white {
+  background: white;
+}
+
 .uk-card-default{
   box-shadow: $global-small-box-shadow;
 }
