--- a/infra-viewer/apps/website/src/theme/theme.scss
+++ b/infra-viewer/apps/website/src/theme/theme.scss
@@ -1,10 +1,6 @@
 @import "forms.scss";
 
-// 1. Custom variables and variables overwrites
-$global-primary-background: #02357c;
-
-// 2. Import default variables and available mixins.
-@import "uikit/src/scss/variables-theme.scss";
+@import "variables";
 @import "uikit/src/scss/mixins-theme.scss";
 
 // 3. Your custom mixin overwrites.
