--- a/infra-viewer/apps/website/src/app/shared/components/arcgis-map/arcgis-map.component.html
+++ b/infra-viewer/apps/website/src/app/shared/components/arcgis-map/arcgis-map.component.html
@@ -1,7 +1,7 @@
 <div id="map"></div>
 
 <div #measurementWidgetsContainer class="uk-background-white" id="measurement-widgets-container">
-  <ul uk-tab="animation:uk-animation-fade;">
+  <ul class="uk-padding-small uk-padding-remove-vertical" uk-tab="animation:uk-animation-fade;">
     <li><a href="#">Distance</a></li>
     <li><a href="#">Surface</a></li>
   </ul>
