Added an icon for measurement tools and a small footer

--- a/infra-viewer/apps/website/src/app/main/app.component.html
+++ b/infra-viewer/apps/website/src/app/main/app.component.html
@@ -169,3 +169,20 @@
       routerLinkActive="uk-active"><a [routerLink]="item.link">{{item.title}}</a></li>
   </ng-container>
 </ng-template>
+
+<footer class="uk-background-muted uk-padding">
+  <div class="uk-container uk-width-1-1" uk-grid>
+    <p class="uk-width-1-2">
+      Ontwikkelt voor de gemeente Arnhem<br>
+      Door: Stein Jonker
+      Minor Digital Media Productions (DMP) 2022 HAN <br>
+    </p>
+    <div class="uk-width-1-2">
+      <p class="uk-text-underline">Contactpersoon</p>
+      <p>
+        Alex Kramer<br>
+        Informatiemanager
+      </p>
+    </div>
+  </div>
+</footer>
