More mobile friendly

--- a/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
@@ -1,8 +1,10 @@
 <div class="container" uk-height-viewport="offset-top:true">
-  <div class="text-container">
-    <h1 class="uk-heading-large" data-aos="fade-zoom-in">Infraviewer</h1>
-    <p>Bekijk de openbare ruimte van Arnhem in 3D.</p>
-    <button class="uk-button uk-button-primary" (click)="authService.login()">Beginnen!</button>
+  <div class="text-container uk-card uk-card-default uk-card-body">
+    <div>
+      <h1 class="uk-card-title uk-heading-large" data-aos="fade-zoom-in">Infraviewer</h1>
+      <p>Bekijk de openbare ruimte van Arnhem in 3D.</p>
+      <button class="uk-button uk-button-primary" (click)="authService.login()">Beginnen!</button>
+    </div>
   </div>
   <div class="image-container uk-background-primary">
     <div class="uk-position-relative uk-visible-toggle uk-light uk-height-1-1"
