--- a/infra-viewer/apps/website/src/app/pages/hub-page/hub-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/hub-page/hub-page.component.html
@@ -1,17 +1,17 @@
 <div uk-grid class="uk-grid-small" *ngIf="hubItems">
   <!--  Create a column with a search bar and options to filter on-->
-  <div class="uk-width-1-4 uk-height-1-1">
+  <div class="uk-width-1-5@m uk-width-1-1@s uk-height-1-1">
     <form #form="ngForm" (ngSubmit)="filterItems()" class="uk-card uk-card-default uk-card-body uk-position-z-index"
           uk-sticky>
       <h3 class="uk-card-title">Search</h3>
       <div class="uk-margin">
-        <div class="uk-inline">
+        <div class="uk-inline uk-width-1-1">
           <span class="uk-form-icon" uk-icon="icon: search"></span>
           <input name="search" class="uk-input" type="text" placeholder="Search" [(ngModel)]="filter.search">
         </div>
       </div>
       <div class="uk-margin">
-        <div class="uk-inline">
+        <div class="uk-inline uk-width-1-1">
           <span class="uk-form-icon" uk-icon="icon: user"></span>
           <input name="owner" class="uk-input" type="text" placeholder="Owner" [(ngModel)]="filter.owner">
         </div>
@@ -23,7 +23,7 @@
   </div>
 
   <!--Create rows with four columns iterating over the hubitems, showing it's information-->
-  <div class="uk-width-1-2" appScrollTracker (scrollingFinished)="getItems(true)">
+  <div class="uk-width-expand" appScrollTracker (scrollingFinished)="getItems(true)">
     <div
       uk-grid
       #hubItemsList="cdkDropList"
@@ -35,7 +35,7 @@
         cdkDrag
         *ngFor="let hubItem of hubItems"
         [cdkDragData]="hubItem"
-        class="uk-width-1-3">
+        class="uk-width-1-1@s uk-width-1-3@m">
         <div class="uk-card uk-card-default uk-card-hover uk-flex uk-flex-column uk-flex-between" data-aos="fade-up">
           <div class="uk-card-media-top">
             <a target="_blank" [href]="createUrlToPortalItem(hubItem)">
@@ -68,7 +68,7 @@
     </div>
   </div>
 
-  <div class="uk-width-1-4">
+  <div class="uk-width-1-4 uk-visible@m">
     <div
       uk-sticky
       class="uk-card uk-card-default uk-card-body uk-position-z-index"
