--- a/infra-viewer/apps/website/src/app/main/app.component.html
+++ b/infra-viewer/apps/website/src/app/main/app.component.html
@@ -174,13 +174,13 @@
   <div class="uk-container uk-width-1-1" uk-grid>
     <p class="uk-width-1-2">
       Ontwikkelt voor de gemeente Arnhem<br>
-      Door: Stein Jonker
+      Door: Stein Jonker<br>
       Minor Digital Media Productions (DMP) 2022 HAN <br>
     </p>
     <div class="uk-width-1-2">
       <p class="uk-text-underline">Contactpersoon</p>
       <p>
-        Alex Kramer<br>
+        <a href="mailto:alex.kramer@arnhem.nl">Alex Kramer</a><br>
         Informatiemanager
       </p>
     </div>
