Add a background to modal to prevent showing what is underneath

--- a/infra-viewer/apps/website/src/app/shared/components/layer-editor/layer-editor.component.html
+++ b/infra-viewer/apps/website/src/app/shared/components/layer-editor/layer-editor.component.html
@@ -1,4 +1,4 @@
-<div #modal class="uk-modal-full uk-overflow-auto" uk-modal>
+<div #modal class="uk-modal-full uk-overflow-auto uk-background-white" uk-modal>
   <div class="uk-modal-dialog h-100vh" *ngIf="rootLayerConfig && serviceInfo">
     <button class="uk-modal-close-full uk-close-large" type="button" uk-close (click)="cancelEdit()"></button>
 
