--- a/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
@@ -1,7 +1,7 @@
 <div class="container" uk-height-viewport="offset-top:true">
   <div class="text-container uk-card uk-card-default uk-card-body">
     <div>
-      <h1 class="uk-card-title uk-heading-large" data-aos="fade-zoom-in">Infraviewer</h1>
+      <h1 class="uk-heading-large" data-aos="fade-zoom-in">Infraviewer</h1>
       <p>Bekijk de openbare ruimte van Arnhem in 3D.</p>
       <button class="uk-button uk-button-primary" (click)="authService.login()">Beginnen!</button>
     </div>
@@ -66,7 +66,7 @@
 </section>
 
 <ng-template #featureCard let-title="title" let-description="description" let-icon="icon">
-  <div class="feature-card uk-padding-small uk-card uk-card-default" data-aos="fade-up">
+  <div class="feature-card uk-card-hover uk-padding-small uk-card uk-card-default" data-aos="fade-up">
     <div class="uk-card-media-top">
       <fa-icon [icon]="icon"></fa-icon>
     </div>
