--- a/infra-viewer/apps/website/src/styles.scss
+++ b/infra-viewer/apps/website/src/styles.scss
@@ -61,6 +61,10 @@ Esri overrides
   color: white;
 }
 
-.esri-widget--button, .esri-button {
+.esri-widget--button, .esri-button, .esri-expand {
   border-radius: $border-rounded-border-radius;
+}
+
+.esri-daylight .esri-slider.esri-slider--horizontal .esri-slider__thumb:hover, .esri-daylight .esri-slider.esri-slider--horizontal .esri-slider__thumb:active, .esri-daylight .esri-slider.esri-slider--horizontal .esri-slider__thumb:focus {
+  background-color: $global-primary-background !important;
 }
