--- a/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
@@ -12,16 +12,16 @@
          uk-slideshow="animation: push; autoplay: true; autoplay-interval: 5000;">
       <ul class="uk-slideshow-items uk-height-1-1">
         <li>
-          <img [src]="getSrc('musis.jpg')" alt="" uk-cover>
+          <img src="assets/musis.jpg" alt="" uk-cover>
         </li>
         <li>
-          <img [src]="getSrc('station.jpg')" alt="" uk-cover>
+          <img src="assets/station.jpg" alt="" uk-cover>
         </li>
         <li>
-          <img [src]="getSrc('johnfrost.jpg')" alt="" uk-cover>
+          <img src="assets/johnfrost.jpg" alt="" uk-cover>
         </li>
         <li>
-          <img [src]="getSrc('korenmarkt.jpg')" alt="" uk-cover>
+          <img src="assets/korenmarkt.jpg" alt="" uk-cover>
         </li>
       </ul>
     </div>
