Expand buttons rounded

--- a/infra-viewer/apps/website/src/styles.scss
+++ b/infra-viewer/apps/website/src/styles.scss
@@ -61,6 +61,6 @@ Esri overrides
   color: white;
 }
 
-.esri-widget--button, .esri-button {
+.esri-widget--button, .esri-button, .esri-expand {
   border-radius: $border-rounded-border-radius;
 }
